--- a/README
+++ b/README
@@ -10,3 +10,6 @@ anche in sistemi embedded com Router e PlugComputer.
 A breve sara` disponibile un piccolo wiki dove verranno elencate tutte le caratteristiche
 e la guida all'utilizzo.
 
+
+[NOTE]
+	al momento l'applicazione non e` completa.
