--- a/README
+++ b/README
@@ -13,3 +13,4 @@ e la guida all'utilizzo.
 
 [NOTE]
 	al momento l'applicazione non e` completa del tutto.
+	I temi da me proposti non sono compatibili con MS Internet Explorer.
